WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
321398
[block-in-inline] A block level box on a line does not start a new paragraph for unicode-bidi: plaintext or text-indent: each-line
https://bugs.webkit.org/show_bug.cgi?id=321398
Summary
[block-in-inline] A block level box on a line does not start a new paragraph ...
alan
Reported
2026-08-09 10:54:00 PDT
ssia
Attachments
[fast-cq]Patch
(31.98 KB, patch)
2026-08-09 12:47 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-08-09 12:47:29 PDT
Created
attachment 480987
[details]
[fast-cq]Patch
EWS
Comment 2
2026-08-10 05:28:41 PDT
Committed
318886@main
(a6cbe56297ee): <
https://commits.webkit.org/318886@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 480987
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-08-10 05:29:11 PDT
<
rdar://problem/184505835
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug