Source/WebCore/layout/formattingContexts/inline/InlineLineTypes.h
@@ -84,7 +84,8 @@ struct PreviousLine {
     size_t lineIndex { 0 };
     // Content width measured during line breaking (avoid double-measuring).
     std::optional<InlineLayoutUnit> trailingOverflowingContentWidth { };
-    bool endsWithLineBreak { false };
+    // A forced line break and a block level box on a line are both paragraph separators.
+    bool endsParagraph { false };
     // True when this line either has contentful inline or block content.
     bool hasContentfulInFlowContent { false };
     TextDirection inlineBaseDirection { TextDirection::LTR };
